# codex-switch

./: .gitignore  ARCHITECTURE.md  Cargo.toml  README.md  RISKS.md  TESTING.md  package-lock.json  package.json
apps/desktop/: index.html  package.json
apps/desktop/src/: App.tsx  styles.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
crates/codex-switch-application/: Cargo.toml
crates/codex-switch-application/src/: lib.rs  manager.rs
crates/codex-switch-cli/: Cargo.toml
crates/codex-switch-cli/src/: main.rs
crates/codex-switch-domain/: Cargo.toml
crates/codex-switch-domain/src/: errors.rs  lib.rs  profile.rs  session.rs  traits.rs
crates/codex-switch-platform/: Cargo.toml
crates/codex-switch-platform/src/: credential_file.rs  credential_linux.rs  credential_macos.rs  credential_registry.rs  credential_windows.rs  detector.rs  diagnostics.rs  fs_secure.rs  inspect.rs  lib.rs  locator.rs  lock.rs  vault.rs
