[package]
name = "codex-switch-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { workspace = true }
codex-switch-application = { path = "../codex-switch-application" }
codex-switch-domain = { path = "../codex-switch-domain" }
secrecy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
