[package]
name = "codex-switch-domain"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { workspace = true }
hex = { workspace = true }
secrecy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
uuid = { workspace = true }
